--- a/docroot/sites/all/themes/ambitious/scss/_global.scss
+++ b/docroot/sites/all/themes/ambitious/scss/_global.scss
@@ -114,6 +114,11 @@ ul.tabs-primary{
 
 }
 
+// Fix admin menu's z-index issue
+div#admin-toolbar{
+  z-index: 11000;
+}
+
 // Main Section
 #main{
   position: relative;
