--- a/docroot/sites/all/themes/ambitious/scss/_header.scss
+++ b/docroot/sites/all/themes/ambitious/scss/_header.scss
@@ -1,6 +1,6 @@
 //=== Header Section ===//
 .top-bar{
-	z-index: 1001;
+	z-index: 9998;
 	.holder{
 		padding: 16px 15px 12px;
 	}
@@ -41,4 +41,9 @@
 		}
 	}
 }
+}
+
+// Header Margin Issue
+#header{
+	margin-bottom: 98px;
 }
